--- a/ui/passwordActions_interface.ui
+++ b/ui/passwordActions_interface.ui
@@ -58,7 +58,9 @@
        </size>
       </property>
       <property name="text">
-       <string>        Добавление пароля</string>
+       <string>        Добавление пароля
+         https://github.com/TimurKhen/X256 - правила
+       </string>
       </property>
      </widget>
     </item>
