errors and interface update

--- a/ui/passwordActions_interface.ui
+++ b/ui/passwordActions_interface.ui
@@ -58,9 +58,20 @@
        </size>
       </property>
       <property name="text">
-       <string>        Добавление пароля
-         https://github.com/TimurKhen/X256 - правила
-       </string>
+       <string>        Добавление пароля</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="pushButton">
+      <property name="font">
+       <font>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>ПОЧИТАТЬ ПРАВИЛА</string>
       </property>
      </widget>
     </item>
